--- a/Wiki/Views/Users/Logout.cshtml
+++ b/Wiki/Views/Users/Logout.cshtml
@@ -6,5 +6,8 @@
 
 <h5>Tus articulos...</h5>
 <script>
-    localStorage.removeItem("token")
+    
+    localStorage.removeItem('token')
+    localStorage.removeItem('rol')
+    localStorage.removeItem('userid')
 </script>
