--- a/Wiki/Views/Home/Index.cshtml
+++ b/Wiki/Views/Home/Index.cshtml
@@ -13,12 +13,17 @@
 @if (Model != null)
 {
 
-
+<div id="myDIV">
     @foreach (var item in Model)
     {
         <div class="card mt-3 border-dark">
             <div class="card-header">
                 Titulo: @Html.DisplayFor(modelItem => item.Articulo.Encabezado.Titulo)
+                
+            </div>
+            <div>
+                <a href="/desactivar" class="desactivar">Desactivar</a>
+                <a href="/eliminar" class="eliminar">Eliminar</a>
             </div>
             <div class="card-body">
                 <section>Descripcion: @Html.DisplayFor(modelItem => item.Articulo.Encabezado.Descripcion)</section>
@@ -33,11 +38,11 @@
                             <ul>
                                 @foreach (var entrada in item.Articulo.Cuerpo.Entradas)
                                 {
-                                <li>
-                                    @Html.DisplayFor(modelItem => entrada.Titulo)
-                                </li>
+                                    <li>
+                                        @Html.DisplayFor(modelItem => entrada.Titulo)
+                                    </li>
 
-                                    
+
                                 }
 
                             </ul>
@@ -46,15 +51,58 @@
                     }
 
                 </section>
-                
+
             </div>
 
             <div class="card-footer">Autor: @Html.DisplayFor(modelItem => item.Articulo.Autor.Nombre)</div>
             <div>@Html.DisplayFor(modelItem => item.Articulo.Fecha)</div>
         </div>
     }
-
+</div>
 }
 
 
+<script>
+       //esperamos que cargue el DOM para determinar que elementos de la interfaz de usuario quedaran activos segun si esta registrado o no, y si tiene rol de autor o administrador
+    (function () {
+        const crearart = document.getElementById("crearart")
+        const crearcuenta = document.getElementById("crearcuenta")
+        const sesion = document.getElementById("sesion")
+        const cerrarsesion = document.getElementById("cerrarsesion")
+        const misarticulos = document.getElementById("misarticulos")
+        const eliminar = document.getElementById("eliminar")
+        const desactivar = document.getElementById("desactivar")
+        const rol = localStorage.getItem("rol")
+        const userId = localStorage.getItem("UserId")
 
+        var eliminarbutons = document.getElementById("myDIV").querySelectorAll(".eliminar");
+        var desactivarbutons = document.getElementById("myDIV").querySelectorAll(".desactivar");
+        if (rol == "Autor") {
+            eliminarbutons.forEach(n => {
+                n.hidden = true
+            })
+        }
+        
+        if (rol==null) {
+            eliminarbutons.forEach(n => {
+                n.hidden = true
+            })
+            desactivarbutons.forEach(n => {
+                n.hidden = true
+            })
+        }
+
+        if (localStorage.getItem("token") === null) {
+            crearart.hidden = true
+            cerrarsesion.hidden = true
+            misarticulos.hidden = true
+
+        } else {
+            cerrarsesion.hidden = false
+            sesion.hidden = true
+            crearcuenta.hidden = true
+            misarticulos.hidden = false
+        }
+
+    })();
+</script>
