--- a/Wiki/Views/_ViewImports.cshtml
+++ b/Wiki/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MVC_Entity_Framework
 @using MVC_Entity_Framework.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Newtonsoft.Json
