--- a/Wiki/Views/_ViewImports.cshtml
+++ b/Wiki/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using MVC_Entity_Framework.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using Newtonsoft.Json
+@using System.Security.Claims
