--- a/Wiki/Views/Categorias/Crear.cshtml
+++ b/Wiki/Views/Categorias/Crear.cshtml
@@ -13,9 +13,9 @@
         <form >
             <input id="userid" type="number" value="5" hidden />
             <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
+                <label asp-for="Name" class="control-label"></label>
                 <input id="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
