--- a/Wiki/Views/Users/Create.cshtml
+++ b/Wiki/Views/Users/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MVC_Entity_Framework.Models.Usuario
+﻿@model MVC_Entity_Framework.Models.User
 
 @{
     ViewData["Title"] = "Create";
@@ -28,9 +28,9 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PassWord" class="control-label"></label>
-                <input asp-for="PassWord" class="form-control" />
-                <span asp-validation-for="PassWord" class="text-danger"></span>
+                <label asp-for="Contraseña" class="control-label"></label>
+                <input asp-for="Contraseña" class="form-control" />
+                <span asp-validation-for="Contraseña" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
