--- a/Wiki/Views/Users/Login.cshtml
+++ b/Wiki/Views/Users/Login.cshtml
@@ -10,17 +10,17 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Login">
+        <form asp-action="Ingresar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
+                <input asp-for="Email" name="usuario" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PassWord" class="control-label"></label>
-                <input asp-for="PassWord" class="form-control" />
-                <span asp-validation-for="PassWord" class="text-danger"></span>
+                <label asp-for="Contraseña" class="control-label"></label>
+                <input asp-for="Contraseña" name="pass" class="form-control" />
+                <span asp-validation-for="Contraseña" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Aceptar" class="btn btn-primary" />
