--- a/Wiki/Views/Users/Login.cshtml
+++ b/Wiki/Views/Users/Login.cshtml
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Contraseña" class="control-label"></label>
-                <input asp-for="Contraseña" name="pass" class="form-control" />
+                <input asp-for="Contraseña" name="pass" type="password" class="form-control" />
                 <span asp-validation-for="Contraseña" class="text-danger"></span>
             </div>
             <div class="form-group">
