--- a/Wiki/Views/Articulos/Index.cshtml
+++ b/Wiki/Views/Articulos/Index.cshtml
@@ -7,45 +7,48 @@
 {
     @foreach (var item in Model)
     {
-        <div class="card mt-3 border-dark">
-            <div class="card-header">
-                Titulo: @Html.DisplayFor(modelItem => item.Articulo.Encabezado.Titulo)
-            </div>
-            <div class="card-body">
-                <section>Descripcion: @Html.DisplayFor(modelItem => item.Articulo.Encabezado.Descripcion)</section>
-                <section>
+        @if (item.Articulo.Actvo)
+        {
+            <div class="card mt-3 border-dark">
+                <div class="card-header">
+                    Titulo: @Html.DisplayFor(modelItem => item.Articulo.Encabezado.Titulo)
+                </div>
+                <div class="card-body">
+                    <section>Descripcion: @Html.DisplayFor(modelItem => item.Articulo.Encabezado.Descripcion)</section>
+                    <section>
 
-                    @if (item.Articulo.Cuerpo != null)
-                    {
-
-                        @if (item.Articulo.Cuerpo.Entradas != null)
+                        @if (item.Articulo.Cuerpo != null)
                         {
-                            <span>Entradas</span>
-                            <ul>
-                                @foreach (var entrada in item.Articulo.Cuerpo.Entradas)
-                                {
-                                    <li>
-                                        @Html.DisplayFor(modelItem => entrada.Titulo)
-                                    </li>
+
+                            @if (item.Articulo.Cuerpo.Entradas != null)
+                            {
+                                <span>Entradas</span>
+                                <ul>
+                                    @foreach (var entrada in item.Articulo.Cuerpo.Entradas)
+                                    {
+                                        <li>
+                                            @Html.DisplayFor(modelItem => entrada.Titulo)
+                                        </li>
 
 
-                                }
+                                    }
 
-                            </ul>
+                                </ul>
 
+                            }
                         }
-                    }
 
-                </section>
-                <a asp-action="Edit" asp-route-id="@item.Articulo.Id">Editar</a> 
+                    </section>
+                    <a asp-action="Edit" asp-route-id="@item.Articulo.Id">Editar</a>
+                </div>
+
+                <div class="card-footer">Autor: @Html.DisplayFor(modelItem => item.Articulo.Autor.Nombre)</div>
+                <div>@Html.DisplayFor(modelItem => item.Articulo.Fecha)</div>
             </div>
+        }
+        }
 
-            <div class="card-footer">Autor: @Html.DisplayFor(modelItem => item.Articulo.Autor.Nombre)</div>
-            <div>@Html.DisplayFor(modelItem => item.Articulo.Fecha)</div>
-        </div>
     }
-
-}
 
 
 
